  * Add file manager and font style settings.
  * Perfecting the system settings and restore default settings better.
  * Remember user account.
  * Change window control button position of youkerf-assistant.
  * Add Kysoft KuaiPan cloud conf.
  * Add the instruction of youker-assistant.
  * Open the cache folder when clicked browser cache item.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 07 Mar 2014 14:07:24 +0800

youker-assistant (1.0.0-0ubuntu1) trusty; urgency=low

  * Access Yahoo weather info.
  * Add Class LoginDialog and HttpAuth to login with Ubuntu Kylin forum account.
  * Cleanup browser cache, thumbnail cache and software configfile.
  * Completed global mouse theme.
  * Modify the icon on PolicyKit Dialog.
  * Adjust the display format of network traffic on the monitor ball.
  * Add ToolTip.qml.
  * Achieve the function about login with forum account.
  * Add FileManager.qml, filemanager.py, common.py, geditmanager.py and settings.py.
  * Reset default config value with Gio Settings and compizconfig.
  * Remove software recommand.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 21 Feb 2014 16:36:44 +0800

youker-assistant (0.3.2-0ubuntu1) trusty; urgency=low

  * Refersh process list automatically and position the originally selected process(LP: #1261802).
  * Adjust the structure of QML project.
  * Add CD-ROM, Audio Card and WLan information.
  * Kill root process.
  * Add Device driver basic information.
  * Use new translation content.
  * Display the preview picture when click the name on the BootAnimation page.
  * Rename dbus and add backends/youker-assistant-daemon/install.sh.
  * Use policykit for all place that requires authentication(LP: #1261799).
  * Add GnuPG keys of the UbuntuKylin archive: ubuntukylin-archive-keyring.gpg.
  * Replace some icons.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 10 Jan 2014 12:30:30 +0800

youker-assistant (0.3.1-0ubuntu1) trusty; urgency=low
