@@ -8,8 +8,9 @@ youker-assistant (1.0.1-0ubuntu1) trusty; urgency=low
   * Add Kysoft KuaiPan cloud conf.
   * Add the instruction of youker-assistant.
   * Open the cache folder when clicked browser cache item.
+  * Notify users when operating the Kingsoft disk cloud configuration.
 
- -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 07 Mar 2014 14:07:24 +0800
+ -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Sun, 09 Mar 2014 21:44:06 +0800
 
 youker-assistant (1.0.0-0ubuntu1) trusty; urgency=low
 
